Addressed contrast issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,12 +297,12 @@ body {
 
 .btn-outline {
     background: transparent;
-    color: #3498db;
-    border-color: #3498db;
+    color: #177bbe;
+    border-color: #177bbe;
 }
 
 .btn-outline:hover {
-    background: #3498db;
+    background: #177bbe;
     color: white;
 }
 
